Backend: implemented full profile module

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=learnitdb;Username=postgres;Password=postgresql@123"
+    "Default": "Host=localhost;Port=5432;Database=learnitdb;Username=postgres;Password=7254"
   },
   "Jwt": {
     "Key": "YOUR_SUPER_SECRET_KEY_CHANGE_THIS",
