Implement AI features: add AiController, FriendsController, and related models; integrate OpenAI provider for chat and course generation

--- a/Server.csproj
+++ b/Server.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>Learnit.Server-development</UserSecretsId>
     <SpaRoot>..\Learnit.client</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:51338</SpaProxyServerUrl>
